Fixed issue with changelog not moving to the front when opened from what's new page. Fixed issue where some icons were not in the right z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1180,7 +1180,8 @@ td:hover .excludeToggle .fa-ban {
     border-radius: 0.5rem;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    z-index: 1;
 }
 
 .tableOptions select {
